quarkus-fruits-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: quarkus-fruits-api
  name: quarkus-fruits-api
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: quarkus-fruits-api
  sessionAffinity: None
  type: ClusterIP
